# abbrev-rs

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: lib.rs
